--- a/config/config-example.json
+++ b/config/config-example.json
@@ -1,18 +1,72 @@
 {
-    "job_name": "example",
+    "job_name": "circle",
+    "out_dir": "out",
     "model_dir": "model",
     "log_dir": "logs",
-    "out_dir": "out",
-    "train_dir": "Data/train",
-    "val_dir": "Data/validation",
-    "test_dir": "Data/test", 
     "frames_per_zip": 119,
     "patched": true,
-    "patch_size": 128,
+    "patch_size": 256,
     "batch_size": 8,
-    "test_images_idx": [0, 59, 135],
+    "test_images_idx": [0, 12, 40, 180],
     "system_log_file": "logs/system.log",
-    "model_save_interval": 5,
+    "model_save_interval": 1,
     "output_interval": 1,
-    "upscale_factor": 2
+    "upscale_factor": 2,
+    "num_threads": 8,
+    "multi_patches_per_frame": false,
+    "train_dir": "Data/train",
+    "val_dir": "Data/val",
+    "test_dir": "Data/test",
+    "model_config": {
+        "name": "WDSS",
+        "version": 1.0,
+        "sum_lr_wavelet": true,
+        "has_feature_fusion": true,
+        "has_fminr": true,
+        "lr_feat_extractor": {
+            "name": "LRFrameFeatureExtractor",
+            "version": 1.0,
+            "in_channels": 12,
+            "out_channels": 64,
+            "layers": [32, 48, 48]
+        },
+        "hr_gb_feat_extractor": {
+            "name": "GBFeatureExtractor",
+            "version": 1.0,
+            "in_channels": 48,
+            "num_layers": 5,
+            "layer_size": 64
+        },
+        "temporal_feat_extractor": {
+            "name": "TemporalFeatureExtractor",
+            "version": 1.0,
+            "in_channels": 32,
+            "out_channels": 16,
+            "layers": [32, 32]
+        },
+        "feature_fusion": {
+            "name": "FeatureFusion",
+            "version": 1.0,
+            "in_channels": 80,
+            "out_channels": 12,
+            "layers": [64, 48]
+        },
+        "fminr": {
+            "name": "FMINR",
+            "version": 1.0,
+            "lr_feat_c": 32,
+            "gb_feat_c": 32,
+            "mlp_inp_c": 64,
+            "out_c": 12,
+            "fourier_mapped": true,
+            "mlp_config": {
+                "type": "relu",
+                "version": 1.0,
+                "in_channels": 64,
+                "out_channels": 12,
+                "num_layers": 4,
+                "layer_size": 64
+            }
+        }
+    }
 }
