--- a/config/config-example.json
+++ b/config/config-example.json
@@ -15,7 +15,7 @@
     "num_threads": 8,
     "multi_patches_per_frame": false,
     "train_dir": "D:\\Dev\\MinorProjDataset\\V5\\Data\\train",
-    "val_dir": "D:\\Dev\\MinorProjDataset\\V5\\Data\\test",
+    "val_dir": "D:\\Dev\\MinorProjDataset\\V5\\Data\\val",
     "test_dir": "D:\\Dev\\MinorProjDataset\\V5\\Data\\test",
     "model_config": {
         "name": "WDSS",
