--- a/config/config-example.json
+++ b/config/config-example.json
@@ -15,7 +15,9 @@
         "train_dir": "Data/train",
         "val_dir": "Data/val",
         "test_dir": "Data/val",
-        "frames_per_zip": 180,
+        "frames_per_zip_train": 185,
+        "frames_per_zip_val": 100,
+        "frames_per_zip_test": 100,
         "patch_size": 512,
         "multi_patches_per_frame": false,
         "multiprocessing": true,
